cabal-version:      2.4
name:               rtg
version:            0.1.0.0
synopsis:           A live coding language for rhythmic patterns
description:        A geometric transformation library for
                    rhythmic pattern generation and manipulation
homepage:           https://www.github.com/ninioartillero/RTG/
bug-reports:        https://github.com/ninioArtillero/RTG/issues
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             Xavier Góngora
maintainer:         ixbalanque@protonmail.ch
copyright:          (c) Xavier Góngora, 2023
category:           Sound
extra-doc-files:
    README.md
    CHANGELOG.md


tested-with: GHC == 9.10.1, GHC == 9.8.1, GHC == 9.6.6, GHC == 9.4.8

source-repository head
  type:     git
  location: https://github.com/niniotArtillero/RTG

library
    exposed-modules:
        Sound.RTG
        Sound.RTG.Async
        Sound.RTG.Bjorklund
        Sound.RTG.BundleTransformations
        Sound.RTG.Event
        Sound.RTG.Euclidean
        Sound.RTG.HotSwap
        Sound.RTG.OscMessages
        Sound.RTG.PatternBundle
        Sound.RTG.PerfectBalance
        Sound.RTG.Play
        Sound.RTG.PlayScale
        Sound.RTG.Polygon
        Sound.RTG.ReactivePattern
        Sound.RTG.RhythmicPattern
        Sound.RTG.Sequencer
        Sound.RTG.Structure
        Sound.RTG.TemporalMonad
        Sound.RTG.TiledMusic
        Sound.RTG.TiledStream
        Sound.RTG.TimePatterns
        Sound.RTG.TimedMonad
        Sound.RTG.UnSafe
        Sound.RTG.Zip

    other-modules:
        Sound.RTG.List
        Sound.RTG.Utils

    other-extensions: Arrows, FlexibleInstances, GeneralizedNewtypeDeriving, LambdaCase

    build-depends:
        , arithmoi ^>=0.13.0.0
        , async >=2.2.5 && <2.3
        , base >=4.17.2.1 && <=5.0.0.0
        , clock ^>=0.8.4
        , containers >=0.6.5 && <= 0.8.0
        , Euterpea ^>=2.0.7
        , foreign-store >=0.2.1 && <0.3
        , groups ^>=0.5.3
        , hosc ^>=0.20
        -- , liquidhaskell == 0.9.10.1.2
        , midair ^>=0.2.0.1
        , multiset-comb ^>=0.2.4.2
        -- To check documentation properties interactively
        , QuickCheck ^>=2.14.3
        , stm >= 2.2.5 && < 2.6
        , Yampa ^>=0.14.8

    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:
                -w
                -- -fplugin=LiquidHaskell

test-suite rtg-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        , base >=4.17.2.1 && <= 5.0.0.0
        , QuickCheck ^>=2.14.3
        , rtg
